# interweave

./: .mcp.json  README.md  install.sh  pyproject.toml
src/interweave_mcp/: __init__.py  __main__.py  server.py
