[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interweave"
version = "0.2.0"
description = "Voice I/O MCP server for Claude Code — speak and listen through your mic and speakers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0",
    "numpy",
    "sounddevice",
    "soundfile",
    "torch",
    "silero-vad",
    "parakeet-mlx",
    "mlx-audio",
]

[project.scripts]
interweave = "interweave_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/interweave_mcp"]
